[package]
name = "matcher"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "mappings"]

[profile.release]
opt-level = 3
lto = true
debug = false

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
dexlib = { git = "https://github.com/Sculas/dexlib-rs", rev = "e826d38" }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
mappings = { path = "mappings" }
